# Forward-Lib

./: .editorconfig  .gitignore  .gitmodules  AloAPI.pri  AloAPI.pro  CHANGES.md  CMakeLists.txt  CMakePresets.json  Forward-Lib.code-workspace  Forward.Lib.sln  MsgAPI.pro  README.md  aloAPI.pro  flapi.pri  flapi.pro  vcpkg.json
aloAPI/: MsgAPI.h  aloAPI.h  aloAPI_global.h  msgapi_global.h
bench/: CMakeLists.txt
cmake/: CMakeLists.txt  FindMySQL.cmake  boost-common.cmake  cxx-common.cmake  fl-config.cmake  qt-common.cmake
examples/: CMakeLists.txt  DatabaseConnect.cpp
fl/: flapi.cpp  flapi.hpp  flpch.hpp
flapi/: CMakeLists.txt  Forward.API.filters  Forward.API.vcxproj  Forward.API.vcxproj.filters
flapi/bench/: CMakeLists.txt  Forward.API.Bench.vcxproj  Forward.API.Bench.vcxproj.filters
flapi/example/: CMakeLists.txt  Use.Forward.API.vcxproj  Use.Forward.API.vcxproj.filters  UseClientAPI.cpp
flapi/fl/app/: Client.cpp  Client.hpp
flapi/fl/forward/: Account.hpp  Channel.cpp  Channel.hpp  Chat.cpp  Chat.hpp  Core.hpp  ForwardMessage.cpp  ForwardMessage.hpp  Group.cpp  Group.hpp  Message.cpp  Message.hpp
flapi/test/: CMakeLists.txt  Forward.API.Test.vcxproj  test_client.cpp
flcore/: CMakeLists.txt  Forward.Core.vcxproj  Forward.Core.vcxproj.filters
flcore/bench/: CMakeLists.txt  Forward.Core.Bench.vcxproj  Forward.Core.Bench.vcxproj.filters  bench_stringbuilder.cpp
flcore/example/: Use.Forward.Core.vcxproj  Use.Forward.Core.vcxproj.filters  UseStringBuilder.cpp
flcore/fl/core/: DateTime.cpp  DateTime.hpp  Exception.cpp  Exception.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  LoggerStream.cpp  LoggerStream.hpp  Memory.hpp  MimeType.cpp  StringArg.hpp  StringArgParser.cpp  StringArgParser.hpp  StringBuilder.cpp  StringBuilder.hpp  Timer.hpp  TypedArg.cpp  TypedArg.hpp
flcore/test/: CMakeLists.txt  Forward.Core.Test.vcxproj  test_datetime.cpp  test_flags.cpp  test_log.cpp  test_mimetype.cpp  test_stringbuilder.cpp  test_typedarg.cpp
fldb/: CMakeLists.txt  Forward.Database.vcxproj  Forward.Database.vcxproj.filters
fldb/bench/: CMakeLists.txt  Forward.Database.Bench.vcxproj  Forward.Database.Bench.vcxproj.filters  bench_sqlite.cpp
fldb/example/: Use.Forward.Database.vcxproj  Use.Forward.Database.vcxproj.filters  UseDBConnection.cpp
fldb/fl/db/: Configuration.cpp  Configuration.hpp  Connection.cpp  Connection.hpp  Core.hpp  DBConnection.cpp  DBConnection.hpp  Database.cpp  Database.hpp  Operation.cpp  Operation.hpp  PreparedQuery.cpp  PreparedQuery.hpp  Query.cpp  Query.hpp  Result.cpp  Result.hpp
fldb/fl/db/connector/: MySQLConnection.cpp  MySQLConnection.hpp  SQLiteConnection.cpp  SQLiteConnection.hpp
fldb/fl/db/mysql/: MySQLConnection.cpp  MySQLConnection.hpp
fldb/fl/db/private/mysql/: DriverLock.cpp  DriverLock.hpp
fldb/fl/db/sqlite/: SQLIteConnection.hpp
fldb/test/: CMakeLists.txt  Forward.Database.Test.vcxproj  test_database.cpp  test_main.cpp  test_mysql.cpp  test_sqlite.cpp
flnet/: CMakeLists.txt  Forward.Net.vcxproj  Forward.Net.vcxproj.filters
flnet/bench/: CMakeLists.txt  Forward.Net.Bench.vcxproj  Forward.Net.Bench.vcxproj.filters  bench_url.cpp
flnet/example/: CMakeLists.txt  Use.Forward.Net.vcxproj  Use.Forward.Net.vcxproj.filters
flnet/fl/: flnet.hpp
flnet/fl/net/: AsyncListener.cpp  AsyncListener.hpp  Base.hpp  Core.hpp  Endpoint.cpp  Endpoint.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  SecureLayer.cpp  SecureLayer.hpp  Socket.cpp  Socket.hpp  SocketThread.cpp  SslServer.cpp  SslServer.hpp  SslSocket.cpp  SslSocket.hpp  TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp
flnet/fl/net/auth/: JsonToken.cpp  JsonToken.hpp  JsonWebToken.cpp  JsonWebToken.hpp
flnet/fl/net/http/: Core.hpp  HttpClient.cpp  HttpClient.hpp  HttpQuery.cpp  HttpQuery.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestHandler.cpp  HttpRequestHandler.hpp  HttpResponder.cpp  HttpResponder.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpRouter.cpp  HttpRouter.hpp  HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  HttpUrl.cpp  HttpUrl.hpp  WebFileSystem.cpp  WebFileSystem.hpp  WebFilesSystem.cpp  WebFilesSystem.hpp
flnet/test/: CMakeLists.txt  Forward.Net.Test.vcxproj  test_main.cpp  test_query.cpp  test_reqsponse.cpp  test_responder.cpp  test_router.cpp  test_url.cpp  test_wfs.cpp
fltypes/: CMakeLists.txt
fltypes/fl/types/: Account.cpp  Channel.cpp  Chat.cpp  Chat.hpp  ForwardMessage.cpp  ForwardMessage.hpp  Message.cpp  Message.hpp
flutils/: CMakeLists.txt
flutils/bench/: CMakeLists.txt  bench_stringbuilder.cpp
flutils/fl/utils/: DateTime.cpp  DateTime.hpp  Enum.cpp  Enum.hpp  Exception.cpp  Exception.hpp  Flags.cpp  Flags.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  LoggerStream.cpp  LoggerStream.hpp  Memory.hpp  MimeType.cpp  MimeType.hpp  StringArg.cpp  StringArg.hpp  StringArgParser.cpp  StringArgParser.hpp  StringBuilder.cpp  StringBuilder.hpp  Timer.hpp  TsQueue.cpp  TypedArg.hpp  TypelessArg.hpp  converters.cpp  converters.hpp
flutils/fl/utils/debug/: DevBenchTimer.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp
flutils/test/: CMakeLists.txt  test_datetime.cpp  test_flags.cpp  test_log.cpp  test_mimetype.cpp  test_stringarg.cpp  test_stringbuilder.cpp  test_typedarg.cpp
flweb/: CMakeLists.txt  Forward.Web.vcxproj  Forward.Web.vcxproj.filters
flweb/bench/: CMakeLists.txt  Forward.Web.Bench.vcxproj  Forward.Web.Bench.vcxproj.filters  bench_url.cpp
flweb/example/: Use.Forward.Web.vcxproj  Use.Forward.Web.vcxproj.filters  UseWebServer.cpp
flweb/fl/web/: Core.hpp  HttpClient.cpp  HttpClient.hpp  HttpQuery.cpp  HttpQuery.hpp  HttpRequest.hpp  HttpResponder.cpp  HttpResponder.hpp  HttpResponse.hpp  HttpRouter.cpp  HttpRouter.hpp  HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  HttpUrl.cpp  HttpUrl.hpp  HttpUrlParser.cpp  HttpUrlParser.hpp  WebFileSystem.cpp  WebFileSystem.hpp
flweb/test/: CMakeLists.txt  Forward.Web.Test.vcxproj  test_query.cpp  test_reqsponse.cpp  test_responder.cpp  test_url.cpp  test_urlparser.cpp  test_wfs.cpp
test/: CMakeLists.txt  test_client.cpp
(+70 files in other folders)
